fixed gaps

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,7 +130,7 @@ select:-webkit-autofill:focus {
 .container {
   --uib-size: 90px;
   --uib-color: #2563eb;
-  --uib-speed: 2s;
+  --uib-speed: 1s;
   position: relative;
   height: var(--uib-size);
   width: var(--uib-size);
